--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,10 @@
         <link rel="stylesheet" href="css/baguetteBox.min.css">
 
         <title>Photos of our work</title>
+        
+        <!--[if lt IE 9]>
+	        <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+        <![endif]-->
 
         <link rel="shortcut icon" href="favicon.ico" />
     </head>
@@ -87,93 +91,183 @@
                     <h2>Compact Gallery</h2>
                 </div>
                 <div class="row no-gutters">
+                   <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_striping1.jpg">
+                            <img class="img-fluid image" src="images/gallery_striping1.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                            </span>
+                        </a>
+                    </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_court1.jpg">
-                            <img class="img-fluid image" src="images/gallery_court1.jpg">
+                            <img class="img-fluid image" src="images/gallery_court1.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Lorem Ipsum</span>
-                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                <span class="description-heading">Game Court Painting</span>
+                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_striping2.jpg">
+                            <img class="img-fluid image" src="images/gallery_striping2.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
                             </span>
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_court2.jpg">
-                            <img class="img-fluid image" src="images/gallery_court2.jpg">
+                            <img class="img-fluid image" src="images/gallery_court2.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Lorem Ipsum</span>
-                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                <span class="description-heading">Game Court Painting</span>
+                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_striping3.jpg">
+                            <img class="img-fluid image" src="images/gallery_striping3.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
                             </span>
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_court3.jpg">
-                            <img class="img-fluid image" src="images/gallery_court3.jpg">
+                            <img class="img-fluid image" src="images/gallery_court3.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Lorem Ipsum</span>
-                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                <span class="description-heading">Game Court Painting</span>
+                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_striping4.jpg">
+                            <img class="img-fluid image" src="images/gallery_striping4.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
                             </span>
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_court4.jpg">
-                            <img class="img-fluid image" src="images/gallery_court4.jpg">
+                            <img class="img-fluid image" src="images/gallery_court4.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Lorem Ipsum</span>
-                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                <span class="description-heading">Game Court Painting</span>
+                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
                             </span>
                             </a>
-                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_striping5.jpg">
+                            <img class="img-fluid image" src="images/gallery_striping5.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                            </span>
+                        </a>
+                    </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_court5.jpg">
-                            <img class="img-fluid image" src="images/gallery_court5.jpg">
+                            <img class="img-fluid image" src="images/gallery_court5.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Lorem Ipsum</span>
-                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                <span class="description-heading">Game Court Painting</span>
+                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_striping6.jpg">
+                            <img class="img-fluid image" src="images/gallery_striping6.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
                             </span>
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_court6.jpg">
-                            <img class="img-fluid image" src="images/gallery_court6.jpg">
+                            <img class="img-fluid image" src="images/gallery_court6.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Lorem Ipsum</span>
-                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                <span class="description-heading">Game Court Painting</span>
+                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_striping7.jpg">
+                            <img class="img-fluid image" src="images/gallery_striping7.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
                             </span>
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_design.jpg">
-                            <img class="img-fluid image" src="images/gallery_design.jpg">
+                            <img class="img-fluid image" src="images/gallery_design.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Lorem Ipsum</span>
-                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                <span class="description-heading">Individual Design</span>
+                                <span class="description-body">Perfect Striping can help you make your parking lot unique.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_striping8.jpg">
+                            <img class="img-fluid image" src="images/gallery_striping8.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
                             </span>
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_redcurb1.jpg">
-                            <img class="img-fluid image" src="images/gallery_redcurb1.jpg">
+                            <img class="img-fluid image" src="images/gallery_redcurb1.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Lorem Ipsum</span>
-                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                <span class="description-heading">Red Curb Painting</span>
+                                <span class="description-body">In case of an emergency event, your parking lot will be compliant with all fire lane requirements. </span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_striping9.jpg">
+                            <img class="img-fluid image" src="images/gallery_striping9.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
                             </span>
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_redcurb2.jpg">
-                            <img class="img-fluid image" src="images/gallery_redcurb2.jpg">
+                            <img class="img-fluid image" src="images/gallery_redcurb2.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Lorem Ipsum</span>
-                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                <span class="description-heading">Red Curb Painting</span>
+                                <span class="description-body">In case of an emergency event, your parking lot will be compliant with all fire lane requirements. </span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_striping10.jpg">
+                            <img class="img-fluid image" src="images/gallery_striping10.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Parking Lot Striping</span>
+                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
                             </span>
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_redcurb3.jpg">
-                            <img class="img-fluid image" src="images/gallery_redcurb3.jpg">
+                            <img class="img-fluid image" src="images/gallery_redcurb3.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Lorem Ipsum</span>
-                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                <span class="description-heading">Red Curb Painting</span>
+                                <span class="description-body">In case of an emergency event, your parking lot will be compliant with all fire lane requirements. </span>
                             </span>
                         </a>
                     </div>
