--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
     <link rel="shortcut icon" href="favicon.ico" />
     
+    <!--[if lt IE 9]>
+	    <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+    <![endif]-->
+    
     <meta name="google-site-verification" content="lqNvU7bUNyAx0zCSZx4hKfcDOY6GnrCDDoFMedI0fbg" />
 </head>
 
