--- a/services.html
+++ b/services.html
@@ -20,6 +20,10 @@
         <link rel="stylesheet" href="css/styles.css">
 
         <title>Perfect Striping: Available Services</title>
+        
+        <!--[if lt IE 9]>
+	        <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+        <![endif]-->
 
         <link rel="shortcut icon" href="favicon.ico" />
     </head>
