--- a/testimonials.html
+++ b/testimonials.html
@@ -21,6 +21,10 @@
 
         <title>Perfect Striping</title>
 
+       <!--[if lt IE 9]>
+	        <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+        <![endif]-->
+       
         <link rel="shortcut icon" href="favicon.ico" />
     </head>
 
