--- a/gallery.html
+++ b/gallery.html
@@ -91,7 +91,7 @@
                     <h2>Compact Gallery</h2>
                 </div>
                 <div class="row no-gutters">
-                   <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                   <div class="col-md-6 col-lg-4 item zoom-on-hover striping">
                         <a class="lightbox" href="images/gallery_striping1.jpg">
                             <img class="img-fluid image" src="images/gallery_striping1.jpg" alt="">
                             <span class="description">
@@ -100,7 +100,7 @@
                             </span>
                         </a>
                     </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover court">
                         <a class="lightbox" href="images/gallery_court1.jpg">
                             <img class="img-fluid image" src="images/gallery_court1.jpg" alt="">
                             <span class="description">
@@ -109,12 +109,21 @@
                             </span>
                         </a>
                     </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_striping2.jpg">
-                            <img class="img-fluid image" src="images/gallery_striping2.jpg" alt="">
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover redcurb">
+                        <a class="lightbox" href="images/gallery_redcurb3.jpg">
+                            <img class="img-fluid image" src="images/gallery_redcurb3.jpg" alt="">
                             <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
+                                <span class="description-heading">Red Curb Painting</span>
+                                <span class="description-body">In case of an emergency event, your parking lot will be compliant with all fire lane requirements. </span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_design.jpg">
+                            <img class="img-fluid image" src="images/gallery_design.jpg" alt="">
+                            <span class="description">
+                                <span class="description-heading">Individual Design</span>
+                                <span class="description-body">Perfect Striping can help you make your parking lot unique.</span>
                             </span>
                         </a>
                     </div>
@@ -137,15 +146,6 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_court3.jpg">
-                            <img class="img-fluid image" src="images/gallery_court3.jpg" alt="">
-                            <span class="description">
-                                <span class="description-heading">Game Court Painting</span>
-                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_striping4.jpg">
                             <img class="img-fluid image" src="images/gallery_striping4.jpg" alt="">
                             <span class="description">
@@ -161,38 +161,11 @@
                                 <span class="description-heading">Game Court Painting</span>
                                 <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
                             </span>
-                            </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_striping5.jpg">
-                            <img class="img-fluid image" src="images/gallery_striping5.jpg" alt="">
-                            <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
-                            </span>
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_court5.jpg">
                             <img class="img-fluid image" src="images/gallery_court5.jpg" alt="">
-                            <span class="description">
-                                <span class="description-heading">Game Court Painting</span>
-                                <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_striping6.jpg">
-                            <img class="img-fluid image" src="images/gallery_striping6.jpg" alt="">
-                            <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_court6.jpg">
-                            <img class="img-fluid image" src="images/gallery_court6.jpg" alt="">
                             <span class="description">
                                 <span class="description-heading">Game Court Painting</span>
                                 <span class="description-body">Perfect Striping can paint game courts and lines for any sport or game one can imagine.</span>
@@ -209,33 +182,6 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_design.jpg">
-                            <img class="img-fluid image" src="images/gallery_design.jpg" alt="">
-                            <span class="description">
-                                <span class="description-heading">Individual Design</span>
-                                <span class="description-body">Perfect Striping can help you make your parking lot unique.</span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_striping8.jpg">
-                            <img class="img-fluid image" src="images/gallery_striping8.jpg" alt="">
-                            <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_redcurb1.jpg">
-                            <img class="img-fluid image" src="images/gallery_redcurb1.jpg" alt="">
-                            <span class="description">
-                                <span class="description-heading">Red Curb Painting</span>
-                                <span class="description-body">In case of an emergency event, your parking lot will be compliant with all fire lane requirements. </span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_striping9.jpg">
                             <img class="img-fluid image" src="images/gallery_striping9.jpg" alt="">
                             <span class="description">
@@ -247,24 +193,6 @@
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
                         <a class="lightbox" href="images/gallery_redcurb2.jpg">
                             <img class="img-fluid image" src="images/gallery_redcurb2.jpg" alt="">
-                            <span class="description">
-                                <span class="description-heading">Red Curb Painting</span>
-                                <span class="description-body">In case of an emergency event, your parking lot will be compliant with all fire lane requirements. </span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_striping10.jpg">
-                            <img class="img-fluid image" src="images/gallery_striping10.jpg" alt="">
-                            <span class="description">
-                                <span class="description-heading">Parking Lot Striping</span>
-                                <span class="description-body">Perfect Striping is proud to be San Diego County`s premier Parking Lot Striping company.</span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="images/gallery_redcurb3.jpg">
-                            <img class="img-fluid image" src="images/gallery_redcurb3.jpg" alt="">
                             <span class="description">
                                 <span class="description-heading">Red Curb Painting</span>
                                 <span class="description-body">In case of an emergency event, your parking lot will be compliant with all fire lane requirements. </span>
